--- a/styles/style.css
+++ b/styles/style.css
@@ -39,3 +39,24 @@ iframe#tela {
     height: 471px;
     width: 269px;
 }
+
+section#redes-sociais {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-end;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.6);
+    transform: scale(1.25);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    transition: transform .3s, border .3s;
+}
